--- a/Vimas/Views/Shared/_Layout.cshtml
+++ b/Vimas/Views/Shared/_Layout.cshtml
@@ -195,6 +195,8 @@
     <script src="/Content/template/template-material/vendors/bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="/Content/template/template-material/vendors/bower_components/bootstrap-select/dist/js/bootstrap-select.js"></script>
 
+    <script src="~/Content/template/template-material/vendors/fileinput/fileinput.min.js"></script>
+
     <script src="~/Content/template/template-material/vendors/bootgrid/jquery.bootgrid.updated.min.js"></script>
     <script src="/Content/template/template-material/js/flot-charts/curved-line-chart.js"></script>
     <script src="/Content/template/template-material/js/flot-charts/line-chart.js"></script>
@@ -202,8 +204,9 @@
     <script src="/Content/template/template-material/js/charts.js"></script>
     <script src="/Content/template/template-material/js/functions.js"></script>
 
+    <!-- Custom -->
     <script src="~/Content/js/common.js"></script>
-
+    <script src="~/Content/js/upload-image.js"></script>
 
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.8.1/jquery.validate.js">
     </script>
